--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>Media management and conversion tool</p>
                     </div>
                 </a>-->
-                <a href="https://MrMR-711.github.io/Chemistry-Lab" style="text-decoration: none;">
+                <a href="https://MrMR-711.github.io/chemistry-lab" style="text-decoration: none;">
                     <div class="project">
                         <picture>
                             <source srcset="css/assets/images/Chemistry-Lab.webp" type="image/webp">
