--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -898,7 +898,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo">
+            <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
                 <img src="../css/assets/logo.png" alt="logo">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
@@ -908,9 +908,9 @@
             </button>
             <div class="nav-links" id="nav-links-menu">
                 <a href="https://MrMR-711.github.io">خانه</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab/Fa">صفحه اصلی</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab/Fa#features">ویژگی ها</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab/Fa#contributors">برنامه نویسان</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab/Fa">صفحه اصلی</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab/Fa#features">ویژگی ها</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab/Fa#contributors">برنامه نویسان</a>
                 <a href="#Explore-footer">کاوش</a>
                 <div class="language-selector">
                     <select id="language-selector">
@@ -954,7 +954,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo"
+                <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
                     <img src="../css/assets/logo.png" alt="logo">
                 </a>
