--- a/chemistry-lab/archives.html
+++ b/chemistry-lab/archives.html
@@ -877,7 +877,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo">
+            <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
                 <img src="css/assets/logo.png" alt="logo">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
@@ -887,9 +887,9 @@
             </button>
             <div class="nav-links" id="nav-links-menu">
                 <a href="https://MrMR-711.github.io">Home</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab">Main</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab#features">Features</a>
-                <a href="https://MrMR-711.github.io/Chemistry-Lab#contributors">Developers</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab">Main</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab#features">Features</a>
+                <a href="https://MrMR-711.github.io/chemistry-lab#contributors">Developers</a>
                 <a href="#Explore-footer">Explore</a>
                 <div class="language-selector">
                     <select id="language-selector">
@@ -933,7 +933,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo"
+                <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
                     <img src="css/assets/logo.png" alt="logo">
                 </a>
