--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo">
+            <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
                 <img src="../css/assets/logo.png" alt="logo">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
@@ -32,7 +32,6 @@
             </button>
             <div class="nav-links" id="nav-links-menu">
                 <a href="https://MrMR-711.github.io">خانه</a>
-				<a href="https://MrMR-711.github.io/Chemistry-Lab/Fa">صفحه اصلی</a>
                 <a href="#features">ویژگی ها</a>
                 <a href="#contributors">برنامه نویسان</a>
                 <a href="./archives">آرشیو</a>
@@ -136,7 +135,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo"
+                <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
                     <img src="../css/assets/logo.png" alt="logo">
                 </a>
