--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo">
+            <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
                 <img src="css/assets/logo.png" alt="logo">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
@@ -131,7 +131,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="https://MrMR-711.github.io/Chemistry-Lab" class="logo"
+                <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
                     <img src="css/assets/logo.png" alt="logo">
                 </a>
