--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -466,6 +466,33 @@
             }
         }
 
+        .footer-linksd {
+            list-style: none;
+        }
+
+        .footer-linksd a {
+            color: var(--text-light);
+            padding: 0.5rem 0;
+            display: inline;
+            font-size: 0.9rem;
+        }
+
+        .myket-img {
+            width: 10rem;
+            transition: transform 0.3s;
+        }
+
+        .myket-img.active {
+            transform: scale(1.08);
+        }
+
+        @media (min-width: 769px) {
+
+            .myket-img:hover {
+                transform: scale(1.08);
+            }
+        }
+
         .p-small {
             color: #f1f1f8;
             font: 400 0.75rem/1.25rem "Open Sans", sans-serif;
@@ -899,7 +926,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
-                <img src="../css/assets/logo.png" alt="logo">
+                <img src="../css/assets/logo.png" alt="لوگو">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
                 <div class="icon-bar"></div>
@@ -956,7 +983,7 @@
             <div class="footer-section">
                 <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
-                    <img src="../css/assets/logo.png" alt="logo">
+                    <img src="../css/assets/logo.png" alt="لوگو">
                 </a>
                 <p style="opacity: 0.7; font-size: 0.9rem;">اپلیکیشن متن‌باز برای تحقیقات شیمیایی
                 </p>
@@ -968,6 +995,14 @@
                             صفحه گیتهاب پروژه</a></li>
                     <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-robot"></i> مینی اپ تلگرام</a>
                     </li>
+                </ul>
+            </div>
+            <div id="Explore-footer" class="footer-section">
+                <h4>از فروشگاه دانلود کنید</h4>
+                <ul class="footer-linksd">
+                    <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
+                            <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
+                    </a></li>
                 </ul>
             </div>
         </div>
@@ -1069,7 +1104,7 @@
             }, 300);
         });
 
-        document.querySelectorAll(".download-btn, .web-btn, .footer-links a").forEach(icon => {
+        document.querySelectorAll(".download-btn, .web-btn, .footer-links a, .myket").forEach(icon => {
             icon.addEventListener("click", event => {
                 event.preventDefault();
                 const targetLink = icon.getAttribute("href");
@@ -1082,7 +1117,7 @@
             });
         });
 
-        document.querySelectorAll('.download-btn, .web-btn, .footer-links a').forEach(btn => {
+        document.querySelectorAll('.download-btn, .web-btn, .footer-links a, .myket-img').forEach(btn => {
             btn.addEventListener('click', () => {
                 btn.classList.add('active');
 
