--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -804,6 +804,10 @@
                 padding: 0 2rem;
             }
 
+            .copyright .p-small {
+                font-size: 0.76rem
+            }
+
             #backToTop {
                 bottom: 20px;
                 right: 20px;
@@ -998,11 +1002,11 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>از فروشگاه دانلود کنید</h4>
+                <h4>دانلود از فروشگاه</h4>
                 <ul class="footer-linksd">
                     <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
                             <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
-                    </a></li>
+                        </a></li>
                 </ul>
             </div>
         </div>
