--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -152,7 +152,7 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>از فروشگاه دانلود کنید</h4>
+                <h4>دانلود از فروشگاه</h4>
                 <ul class="footer-linksd">
                     <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
                             <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
