--- a/chemistry-lab/archives.html
+++ b/chemistry-lab/archives.html
@@ -776,6 +776,10 @@
                 padding: 0 2rem;
             }
 
+            .copyright .p-small {
+                font-size: 0.76rem
+            }
+
             #backToTop {
                 bottom: 20px;
                 right: 20px;
@@ -970,11 +974,11 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>Download from Stroes</h4>
+                <h4>Download from Store</h4>
                 <ul class="footer-linksd">
                     <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
                             <img src="css/assets/myket-get-en.svg" alt="myket-get" class="myket-img">
-                    </a></li>
+                        </a></li>
                 </ul>
             </div>
         </div>
