--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -148,7 +148,7 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>Download from Stroe</h4>
+                <h4>Download from Store</h4>
                 <ul class="footer-linksd">
                     <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
                             <img src="css/assets/myket-get-en.svg" alt="myket-get" class="myket-img">
