--- a/Fa/about.html
+++ b/Fa/about.html
@@ -50,246 +50,11 @@
 
     <button id="backToTop" title="Back to top">
         <picture>
-            <source srcset="../css/assets/up-buttom.webp" type="image/webp">
-            <img src="../css/assets/up-buttom.png" alt="backToTop" class="icon-backToTop">
+            <img src="../css/assets/up-buttom.svg" alt="backToTop" class="icon-backToTop">
         </picture>
     </button>
 
-    <script>
-        // تابع دریافت مسیر تصاویر هاور از CSS
-        function getHoverImagesFromCSS(selectors) {
-            const images = [];
-
-            selectors.forEach(selector => {
-                document.querySelectorAll(selector).forEach(el => {
-                    const style = window.getComputedStyle(el);
-                    const bgImage = style.backgroundImage;
-
-                    if (bgImage && bgImage.startsWith('url')) {
-                        const url = bgImage.replace(/url\(["']?(.*?)["']?\)/, '$1'); // استخراج URL
-                        images.push(url);
-                    }
-
-                    // بررسی نسخه WebP در @supports
-                    if (CSS.supports('background-image', 'url(data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA)')) {
-                        const webpURL = url.replace(/\.\w+$/, '.webp'); // تغییر پسوند به .webp
-                        images.push(webpURL);
-                    }
-                });
-            });
-
-            return [...new Set(images)]; // حذف موارد تکراری
-        }
-
-        // تابع پیش‌بارگذاری عکس‌ها
-        function preloadImages(urls) {
-            urls.forEach(url => {
-                const img = new Image();
-                img.src = url;
-            });
-        }
-
-        // اجرای تابع هنگام لود صفحه
-        window.onload = function () {
-            const hoverSelectors = [
-                '.nav-item-home:hover',
-                '.nav-item-search:hover',
-                '.nav-item-search.hover-active',
-                '.nav-item-language:hover',
-                '.nav-item-language.hover-active',
-                '.nav-item-about:hover'
-            ];
-            const hoverImages = getHoverImagesFromCSS(hoverSelectors);
-            preloadImages(hoverImages);
-        };
-
-        const searchButton = document.getElementById("search-button");
-        const searchBox = document.getElementById("search-box");
-        const searchInput = document.querySelector(".search-input");
-        const resultsList = document.getElementById("results-list");
-
-        let isSearchBoxVisible = false;
-
-        searchButton.addEventListener("click", (event) => {
-            event.preventDefault(); // جلوگیری از رفتار پیش‌فرض کلیک
-
-            if (isSearchBoxVisible) {
-                searchBox.classList.remove("visible");
-                searchInput.value = ""; // پاک کردن متن داخل search-input
-                resultsList.innerHTML = ""; // پاک کردن لیست نتایج
-                searchButton.classList.remove("hover-active"); // حذف کلاس hover-active
-            } else {
-                searchBox.classList.add("visible");
-                searchInput.focus();
-                searchButton.classList.add("hover-active"); // افزودن کلاس hover-active
-            }
-            isSearchBoxVisible = !isSearchBoxVisible;
-        });
-
-        function closeSearchBox() {
-            searchBox.classList.remove("visible");
-            searchInput.value = ""; // پاک کردن متن داخل search-input
-            resultsList.innerHTML = ""; // پاک کردن لیست نتایج
-            searchButton.classList.remove("hover-active");
-        }
-
-        document.addEventListener("click", (event) => {
-            if (
-                !searchBox.contains(event.target) && // اگر کلیک خارج از باکس جستجو باشد
-                !searchButton.contains(event.target) // و خارج از دکمه جستجو باشد
-            ) {
-                closeSearchBox();
-                isSearchBoxVisible = false;
-            }
-        });
-
-        searchInput.addEventListener("input", () => {
-            const query = searchInput.value.trim();
-            if (query) {
-                const results = searchInData(query);
-                displayResults(results);
-            } else {
-                resultsList.innerHTML = "";
-            }
-        });
-
-        function searchInData(query) {
-            const projects = document.querySelectorAll(".projects .project");
-            const results = [];
-
-            projects.forEach(project => {
-                const title = project.querySelector("h3").textContent.trim();
-                const imgSrc = project.querySelector("img").src;
-                if (title.toLowerCase().includes(query.toLowerCase())) {
-                    results.push({
-                        title: title,
-                        link: project.closest("a").href,
-                        image: imgSrc
-                    });
-                }
-            });
-
-            return results;
-        }
-
-        function displayResults(results) {
-            resultsList.innerHTML = "";
-            if (results.length > 0) {
-                results.forEach(result => {
-                    const li = document.createElement("li");
-                    li.innerHTML = `
-                  <a href="${result.link}">
-                      <img src="${result.image}" alt="${result.title}" style="width: 80px; height: 50px; margin-right: 10px; border-radius: 5px;">
-                      <h3 style="margin-top: -45px; margin-left: 90px;">${result.title}</h3>
-                  </a>`;
-                    resultsList.appendChild(li);
-                });
-            } else {
-                const noResultsMessage = document.createElement("li");
-                noResultsMessage.textContent = ".نتیجه‌ای یافت نشد";
-                noResultsMessage.style.color = "#cf0000";
-                noResultsMessage.style.textAlign = "right";
-                resultsList.appendChild(noResultsMessage);
-            }
-        }
-
-        const languageButton = document.getElementById("language-button");
-        const languageBox = document.getElementById("language-box");
-        let islanguageBoxVisible = false;
-
-        // مدیریت نمایش/مخفی کردن باکس زبان
-        languageButton.addEventListener("click", (event) => {
-            event.preventDefault();
-
-            if (islanguageBoxVisible) {
-                languageBox.classList.remove("visible");
-                languageButton.classList.remove("hover-active");
-            } else {
-                languageBox.classList.add("visible");
-                languageButton.classList.remove("hover-active");
-            }
-            islanguageBoxVisible = !islanguageBoxVisible;
-        });
-
-        // مدیریت کلیک خارج از باکس زبان
-        document.addEventListener("click", (event) => {
-            if (!languageBox.contains(event.target) && !languageButton.contains(event.target)) {
-                languageBox.classList.remove("visible");
-                languageButton.classList.remove("hover-active");
-                islanguageBoxVisible = false;
-            }
-        });
-
-        // مدیریت انتخاب زبان
-        document.querySelectorAll('#language-box a').forEach(link => {
-            link.addEventListener('click', function (e) {
-                e.preventDefault();
-                const lang = this.classList.contains('language-persian') ? 'fa' : 'en';
-
-                // ذخیره زبان در localStorage
-                localStorage.setItem('language', lang);
-
-                // هدایت به صفحه تنظیمات متناسب با زبان
-                if (lang === 'en') {
-                    window.location.href = '../about';
-                } else {
-                    window.location.href = './about';
-                }
-            });
-        });
-
-        document.querySelectorAll(".nav-item-home, .nav-item-language,.nav-item-search, .nav-item-about").forEach(icon => {
-            icon.addEventListener("click", event => {
-                event.preventDefault(); // جلوگیری از رفتار پیش‌فرض کلیک
-                const targetLink = icon.getAttribute("href");
-
-                setTimeout(() => {
-                    if (targetLink) {
-                        window.location.href = targetLink;
-                    }
-                }, 700); // تاخیر یک ثانیه‌ای برای باز شدن لینک
-            });
-        });
-
-        document.querySelectorAll(".nav-item-home, .nav-item-language,.nav-item-search, .nav-item-about").forEach(icon => {
-            // شبیه‌سازی hover هنگام لمس یا کلیک
-            icon.addEventListener("touchstart", () => {
-                icon.classList.add("hover-active");
-            });
-
-            // حذف hover وقتی لمس قطع می‌شود
-            icon.addEventListener("touchend", () => {
-                setTimeout(() => {
-                    icon.classList.remove("hover-active");
-                }, 500); // زمان برای طبیعی‌تر شدن تعامل
-            });
-        });
-
-        // گرفتن دکمه
-        const backToTopButton = document.getElementById("backToTop");
-
-        // نمایش دکمه وقتی کاربر به پایین صفحه می‌رود
-        window.onscroll = function () {
-            if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-                backToTopButton.style.display = "block";
-            } else {
-                backToTopButton.style.display = "none";
-            }
-        };
-
-        // بازگشت به بالای صفحه با کلیک روی دکمه
-        backToTopButton.addEventListener("click", function () {
-            window.scrollTo({ top: 0, behavior: "smooth" });
-
-            // حذف حالت hover بعد از کلیک
-            backToTopButton.classList.add("no-hover");
-
-            // بازگشت به حالت عادی بعد از مدت کوتاه
-            setTimeout(() => {
-                backToTopButton.classList.remove("no-hover");
-            }, 300); // این زمان را می‌توان تنظیم کرد
-        });
-    </script>
+    <script src="../index.js" defer></script>
 </body>
 
 </html>
