--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -930,7 +930,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
-                <img src="../css/assets/logo.png" alt="لوگو">
+                <img src="../css/assets/logo.svg" alt="لوگو">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
                 <div class="icon-bar"></div>
@@ -987,7 +987,7 @@
             <div class="footer-section">
                 <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
-                    <img src="../css/assets/logo.png" alt="لوگو">
+                    <img src="../css/assets/logo.svg" alt="لوگو">
                 </a>
                 <p style="opacity: 0.7; font-size: 0.9rem;">اپلیکیشن متن‌باز برای تحقیقات شیمیایی
                 </p>
