--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
-                <img src="../css/assets/logo.png" alt="لوگو">
+                <img src="../css/assets/logo.svg" alt="لوگو">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
                 <div class="icon-bar"></div>
@@ -51,7 +51,7 @@
             <div class="hero-decor decor-2"></div>
             <div class="hero-content">
 			    <div class="hero-imaged">
-                    <img src="../css/assets/images/hero-image.png" alt="رابط نرم افزار آزمایشگاه شیمی" width="650">
+                    <img src="../css/assets/images/hero-image.svg" alt="رابط نرم افزار آزمایشگاه شیمی" width="650">
                 </div>
                 <div class="hero-text">
                     <h1 class="hero-title">آزمایشگاه شیمی</h1>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="hero-imagem">
-                    <img src="../css/assets/images/hero-image.png" alt="رابط نرم افزار آزمایشگاه شیمی" width="650">
+                    <img src="../css/assets/images/hero-image.svg" alt="رابط نرم افزار آزمایشگاه شیمی" width="650">
                 </div>
             </div>
         </section>
@@ -137,7 +137,7 @@
             <div class="footer-section">
                 <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
-                    <img src="../css/assets/logo.png" alt="لوگو">
+                    <img src="../css/assets/logo.svg" alt="لوگو">
                 </a>
                 <p style="opacity: 0.7; font-size: 0.9rem;">اپلیکیشن متن‌باز برای تحقیقات شیمیایی
                 </p>
