--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="https://MrMR-711.github.io/chemistry-lab" class="logo">
-                <img src="css/assets/logo.png" alt="logo">
+                <img src="css/assets/logo.svg" alt="logo">
             </a>
             <button class="mobile-menu" aria-label="Toggle Navigation" id="mobile-menu-btn">
                 <div class="icon-bar"></div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="css/assets/images/hero-image.png" alt="Chemist Lab Software Interface" width="650">
+                    <img src="css/assets/images/hero-image.svg" alt="Chemist Lab Software Interface" width="650">
                 </div>
             </div>
         </section>
@@ -133,7 +133,7 @@
             <div class="footer-section">
                 <a href="https://MrMR-711.github.io/chemistry-lab" class="logo"
                     style="display: inline; margin-bottom: 1.2rem; color: var(--text-dark);">
-                    <img src="css/assets/logo.png" alt="logo">
+                    <img src="css/assets/logo.svg" alt="logo">
                 </a>
                 <p style="opacity: 0.7; font-size: 0.9rem;">Open source app for chemical research.
                 </p>
