--- a/Fa/index.html
+++ b/Fa/index.html
@@ -84,7 +84,7 @@
     </button>
 
 
-    <script src="index.js" defer></script>
+    <script src="../index.js" defer></script>
 
     <footer id="contact">
         <p><a href="mailto: mohammad117811@gmail.com" class="foot-item-email"></a></p>
