--- a/Fa/index.html
+++ b/Fa/index.html
@@ -83,9 +83,6 @@
         </picture>
     </button>
 
-
-    <script src="../index.js" defer></script>
-
     <footer id="contact">
         <p><a href="mailto: mohammad117811@gmail.com" class="foot-item-email"></a></p>
         <p><a href="https://t.me/MrMR_711" class="foot-item-telegram"></a></p>
@@ -93,6 +90,8 @@
         <p><a href="https://github.com/MrMR-711">MrMR-711</a></p>
         <p>تمام حقوق برای</p>
     </footer>
+    
+    <script src="index.js" defer></script>
 </body>
 
 </html>
