--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </picture>
     </button>
 
-    <<script src="index.js" defer></script>
+    <<script src="about.js" defer></script>
 </body>
 
 </html>
