--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="about.png" type="image/png">
     <link rel="stylesheet" href="css/En-about-style.css">
     <link type="text/css" rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -16,18 +17,26 @@
     </header>
     <nav class="navbar">
         <div class="nav-box">
-            <a href="about" class="nav-item-about"></a>
-            <a href="" id="language-button" class="nav-item-language"></a>
+            <a href="about" class="nav-item-about">
+                <i class="fa-solid fa-info-circle"></i>
+            </a>
+            <a href="" id="language-button" class="nav-item-language">
+                <i class="fa-solid fa-language"></i>
+            </a>
             <div id="language-box" class="hidden">
-                <a href="../Fa/about" class="language-persian">Persian</a>
-                <a href="about" class="language-english">English</a>
+                <a href="../Fa/" class="language-persian">Persian</a>
+                <a href="https://mrmr-711.github.io/" class="language-english">English</a>
             </div>
-            <a href="" id="search-button" class="nav-item-search"></a>
+            <a href="" id="search-button" class="nav-item-search">
+                <i class="fa-solid fa-search"></i>
+            </a>
             <div id="search-box" class="hidden">
                 <input type="text" placeholder="Search..." class="search-input" />
                 <ul id="results-list"></ul>
             </div>
-            <a href="https://mrmr-711.github.io" class="nav-item-home"></a>
+            <a href="https://mrmr-711.github.io" class="nav-item-home">
+                <i class="fa-solid fa-house"></i>
+              </a>
     </nav>
     <main>
         <h1 class="bold">Welcome to my projects page</h1>
