--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chemist Lab - Official Website</title>
     <meta name="google-site-verification" content="KcY0gM8bM-wyo_GUkoFD4oRRAYoqlc7LQfa4rveRlYQ" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="css/fonts.css">
     <link type="text/css" rel="stylesheet" href="css/Default-Style.css">
     <link rel="icon" href="icon.png" type="image/png">
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&family=Space+Grotesk:wght@500;700&display=swap"
         rel="stylesheet">
+	<link href="../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/brands.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/solid.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/sharp-thin.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/duotone-thin.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/sharp-duotone-thin.css" rel="stylesheet" />
 
 </head>
 
