--- a/Fa/about.html
+++ b/Fa/about.html
@@ -8,7 +8,12 @@
     <link rel="icon" href="../about.png" type="image/png">
     <link rel="stylesheet" href="../css/about-style.css">
     <link type="text/css" rel="stylesheet" href="../css/font.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/brands.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/solid.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/sharp-thin.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/duotone-thin.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/sharp-duotone-thin.css" rel="stylesheet" />
 </head>
 
 <body>
