--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>آزمایشگاه شیمی - آرشیو</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="../css/fonts.css">
     <link rel="icon" href="../icon.png" type="image/png">
     <link
@@ -16,6 +15,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+	<link href="../../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/brands.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/solid.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/sharp-thin.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/duotone-thin.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/sharp-duotone-thin.css" rel="stylesheet" />
     <style>
         * {
             margin: 0;
