--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -1013,6 +1013,11 @@
                             <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
                         </a></li>
                 </ul>
+                <ul class="footer-linksd">
+                    <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
+                            <img src="../css/assets/apkpure-get-fa.svg" alt="apkpure-get" class="myket-img">
+                    </a></li>
+                </ul>
             </div>
         </div>
         <!-- Copyright -->
