--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -159,6 +159,11 @@
                             <img src="css/assets/myket-get-en.svg" alt="myket-get" class="myket-img">
                     </a></li>
                 </ul>
+                <ul class="footer-linksd">
+                    <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
+                            <img src="css/assets/apkpure-get-en.svg" alt="apkpure-get" class="myket-img">
+                    </a></li>
+                </ul>
             </div>
         </div>
         <!-- Copyright -->
