--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-	<link href="../../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="../../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
     <link href="../../css/fontawesome-pro-6.7.2-web/css/brands.css" rel="stylesheet" />
     <link href="../../css/fontawesome-pro-6.7.2-web/css/solid.css" rel="stylesheet" />
     <link href="../../css/fontawesome-pro-6.7.2-web/css/sharp-thin.css" rel="stylesheet" />
@@ -475,6 +475,12 @@
             list-style: none;
         }
 
+        .footer-linksdf {
+            list-style: none;
+            display: flex;
+            gap: 10px;
+        }
+
         .footer-linksd a {
             color: var(--text-light);
             padding: 0.5rem 0;
@@ -809,6 +815,11 @@
                 padding: 0 2rem;
             }
 
+            .footer-linksdf {
+                display: grid;
+                gap: 0;
+            }
+
             .copyright .p-small {
                 font-size: 0.76rem
             }
@@ -1007,16 +1018,33 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>دانلود از فروشگاه</h4>
-                <ul class="footer-linksd">
+                <h4>ارتباط</h4>
+                <ul class="footer-links">
+                    <li><a href="https://t.me/Chemist_Iab"><i class="fa-brands fa-telegram"></i> کانال تلگرام</a>
+                    </li>
+                    <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> ایمیل به ما</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="Explore-footer" class="footer-section">
+                <h4>دانلود</h4>
+                <ul class="footer-linksdf">
                     <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
-                            <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
+                            <img src="../css/assets/download-svgs/myket-get-fa.svg" alt="myket-get" class="myket-img">
+                        </a></li>
+                    <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
+                            <img src="../css/assets/download-svgs/apkpure-get-fa.svg" alt="apkpure-get"
+                                class="myket-img">
                         </a></li>
                 </ul>
-                <ul class="footer-linksd">
-                    <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
-                            <img src="../css/assets/apkpure-get-fa.svg" alt="apkpure-get" class="myket-img">
-                    </a></li>
+                <ul class="footer-linksdf">
+                    <li><a href="https://appteka.store/app/e0fr215849" class="myket">
+                            <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get"
+                                class="myket-img">
+                        </a></li>
+                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk" class="myket">
+                            <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
+                        </a></li>
                 </ul>
             </div>
         </div>
