--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -157,16 +157,31 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>دانلود از فروشگاه</h4>
-                <ul class="footer-linksd">
-                    <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
-                            <img src="../css/assets/myket-get-fa.svg" alt="دانلود از مایکت" class="myket-img">
-                    </a></li>
+                <h4>ارتباط</h4>
+                <ul class="footer-links">
+                    <li><a href="https://t.me/Chemist_Iab"><i class="fa-brands fa-telegram"></i> کانال تلگرام</a>
+                    </li>
+                    <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> ایمیل به ما</a>
+                    </li>
                 </ul>
-                <ul class="footer-linksd">
+            </div>
+            <div id="Explore-footer" class="footer-section">
+                <h4>دانلود</h4>
+                <ul class="footer-linksdf">
+                    <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
+                            <img src="../css/assets/download-svgs/myket-get-fa.svg" alt="myket-get" class="myket-img">
+                        </a></li>
                     <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
-                            <img src="../css/assets/apkpure-get-fa.svg" alt="apkpure-get" class="myket-img">
-                    </a></li>
+                            <img src="../css/assets/download-svgs/apkpure-get-fa.svg" alt="apkpure-get" class="myket-img">
+                        </a></li>
+                </ul>
+                <ul class="footer-linksdf">
+                    <li><a href="https://appteka.store/app/e0fr215849" class="myket">
+                            <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get" class="myket-img">
+                        </a></li>
+                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk"  class="myket">
+                            <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
+                        </a></li>
                 </ul>
             </div>
         </div>
