--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&family=Space+Grotesk:wght@500;700&display=swap"
         rel="stylesheet">
-	<link href="../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="../css/fontawesome-pro-6.7.2-web/css/fontawesome.css" rel="stylesheet" />
     <link href="../css/fontawesome-pro-6.7.2-web/css/brands.css" rel="stylesheet" />
     <link href="../css/fontawesome-pro-6.7.2-web/css/solid.css" rel="stylesheet" />
     <link href="../css/fontawesome-pro-6.7.2-web/css/sharp-thin.css" rel="stylesheet" />
@@ -153,16 +153,31 @@
                 </ul>
             </div>
             <div id="Explore-footer" class="footer-section">
-                <h4>Download from Store</h4>
-                <ul class="footer-linksd">
-                    <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
-                            <img src="css/assets/myket-get-en.svg" alt="myket-get" class="myket-img">
-                    </a></li>
+                <h4>Contact</h4>
+                <ul class="footer-links">
+                    <li><a href="https://t.me/Chemist_Iab"><i class="fa-brands fa-telegram"></i> Telegram Channel</a>
+                    </li>
+                    <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> Emial Us</a>
+                    </li>
                 </ul>
-                <ul class="footer-linksd">
+            </div>
+            <div id="Explore-footer" class="footer-section">
+                <h4>Download</h4>
+                <ul class="footer-linksdf">
+                    <li><a href="https://myket.ir/app/com.chemistry.chemistlab" class="myket">
+                            <img src="css/assets/download-svgs/myket-get-en.svg" alt="myket-get" class="myket-img">
+                        </a></li>
                     <li><a href="https://apkpure.com/p/com.chemistry.chemistlab" class="myket">
-                            <img src="css/assets/apkpure-get-en.svg" alt="apkpure-get" class="myket-img">
-                    </a></li>
+                            <img src="css/assets/download-svgs/apkpure-get-en.svg" alt="apkpure-get" class="myket-img">
+                        </a></li>
+                </ul>
+                <ul class="footer-linksdf">
+                    <li><a href="https://appteka.store/app/e0fr215849" class="myket">
+                            <img src="css/assets/download-svgs/appteka-get-en.svg" alt="appteka-get" class="myket-img">
+                        </a></li>
+                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk"  class="myket">
+                            <img src="css/assets/download-svgs/direct-get-en.svg" alt="direct-get" class="myket-img">
+                        </a></li>
                 </ul>
             </div>
         </div>
