--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -1042,7 +1042,7 @@
                             <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get"
                                 class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk" class="myket">
+                    <li><a id="button-download" href="../Chemist-Lab-V1.0.0.apk" class="myket">
                             <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
                         </a></li>
                 </ul>
