--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -179,7 +179,7 @@
                     <li><a href="https://appteka.store/app/e0fr215849" class="myket">
                             <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get" class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk"  class="myket">
+                    <li><a id="button-download" href="../Chemist-Lab-V1.0.0.apk"  class="myket">
                             <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
                         </a></li>
                 </ul>
