--- a/Fa/index.html
+++ b/Fa/index.html
@@ -101,7 +101,7 @@
         <p><a href="mailto: mohammad117811@gmail.com" class="foot-item-email"></a></p>
         <p><a href="https://t.me/MrMR_711" class="foot-item-telegram"></a></p>
         <p>.محفوظ است</p>
-        <p><a href="https://github.com/MrMR-711">MrMR-711</a></p>
+        <p><a href="https://t.me/MrMR_711Channel">MrMR-711</a></p>
         <p>تمام حقوق برای</p>
     </footer>
     
