--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <footer id="contact">
         <p><a href="mailto: mohammad117811@gmail.com" class="foot-item-email"></a></p>
-        <p><a href="https://t.me/MrMR_711" class="foot-item-telegram"></a></p>
+        <p><a href="https://t.me/MrMR_711Channel" class="foot-item-telegram"></a></p>
         <p>All rights reserved for</p>
         <p><a href="https://github.com/MrMR-711">MrMR-711</a></p>
         <p>.</p>
