--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -1020,7 +1020,7 @@
             <div id="Explore-footer" class="footer-section">
                 <h4>ارتباط</h4>
                 <ul class="footer-links">
-                    <li><a href="https://t.me/Chemist_Iab"><i class="fa-brands fa-telegram"></i> کانال تلگرام</a>
+                    <li><a href="https://t.me/MrMR_711Channel"><i class="fa-brands fa-telegram"></i> کانال تلگرام</a>
                     </li>
                     <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> ایمیل به ما</a>
                     </li>
