--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -155,7 +155,7 @@
             <div id="Explore-footer" class="footer-section">
                 <h4>Contact</h4>
                 <ul class="footer-links">
-                    <li><a href="https://t.me/Chemist_Iab"><i class="fa-brands fa-telegram"></i> Telegram Channel</a>
+                    <li><a href="https://t.me/MrMR_711Channel"><i class="fa-brands fa-telegram"></i> Telegram Channel</a>
                     </li>
                     <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> Emial Us</a>
                     </li>
