--- a/Fa/index.html
+++ b/Fa/index.html
@@ -65,13 +65,21 @@
                 <a href="https://MrMR-711.github.io/chemistry-lab" style="text-decoration: none;">
                     <div class="project">
                         <picture>
-                            <source srcset="../css/assets/images/Chemistry-Lab.webp" type="image/webp">
-                            <img src="../css/assets/images/Chemistry-Lab.jpg" alt="Chemistry Lab">
+                            <source srcset="../css/assets/images/Chemistry-Lab-poster-fa.jpg" type="image/webp">
+                            <img src="../css/assets/images/Chemistry-Lab-poster-fa.jpg" alt="Chemistry Lab">
                         </picture>
                         <h3>آزمایشگاه شیمی</h3>
                         <p>ابزار شبیه‌ سازی عنصر های شیمیایی</p>
                     </div>
                 </a>
+                <!--<a href="https://MrMR-711.github.io/Future-Project" style="text-decoration: none;">
+                    <div class="project">
+                        <source srcset="../css/assets/images/Alien-Cipher-poster.jpg" type="image/webp">
+                        <img src="../css/assets/images/Alien-Cipher-poster.jpg" alt="Future Project">
+                        <h3>Alien Cipher</h3>
+                        <p>برای پیام های مخفی به هرکسی</p>
+                    </div>
+                </a>-->
                 <a href="https://MrMR-711.github.io/Future-Project" style="text-decoration: none;">
                     <div class="project">
                         <source srcset="../css/assets/images/Future-Project.webp" type="image/webp">
@@ -101,7 +109,7 @@
         <p><a href="mailto: mohammad117811@gmail.com" class="foot-item-email"></a></p>
         <p><a href="https://t.me/MrMR_711" class="foot-item-telegram"></a></p>
         <p>.محفوظ است</p>
-        <p><a href="https://t.me/MrMR_711Channel">MrMR-711</a></p>
+        <p><a href="https://github.com/MrMR-711">MrMR-711</a></p>
         <p>تمام حقوق برای</p>
     </footer>
     
