--- a/index.html
+++ b/index.html
@@ -65,13 +65,23 @@
                 <a href="https://MrMR-711.github.io/chemistry-lab" style="text-decoration: none;">
                     <div class="project">
                         <picture>
-                            <source srcset="css/assets/images/Chemistry-Lab.webp" type="image/webp">
-                            <img src="css/assets/images/Chemistry-Lab.jpg" alt="Chemistry Lab">
+                            <source srcset="css/assets/images/Chemistry-Lab-poster-en.jpg" type="image/webp">
+                            <img src="css/assets/images/Chemistry-Lab-poster-en.jpg" alt="Chemistry Lab">
                         </picture>
                         <h3>Chemistry Lab</h3>
                         <p>Chemical element simulation tool</p>
                     </div>
                 </a>
+                <!--<a href="https://MrMR-711.github.io/Future-Project" style="text-decoration: none;">
+                    <div class="project">
+                        <picture>
+                            <source srcset="css/assets/images/Alien-Cipher-poster.jpg" type="image/webp">
+                            <img src="css/assets/images/Alien-Cipher-poster.jpg" alt="Future Project">
+                        </picture>
+                        <h3>Alien Cipher</h3>
+                        <p>For secret messages to anyone</p>
+                    </div>
+                </a>-->
                 <a href="https://MrMR-711.github.io/Future-Project" style="text-decoration: none;">
                     <div class="project">
                         <picture>
