--- a/chemistry-lab/archives.html
+++ b/chemistry-lab/archives.html
@@ -954,6 +954,17 @@
                 </div>
                 <div class="android-versions-list">
 
+                    <!--<div class="version-item">
+                        <div class="version-details">
+                            <h3 class="version-name">Version 1.2.0</h3>
+                            <p class="version-date">Release Date: June 16, 2025</p>
+                        </div>
+                        <a id="button-download" href="./Chemist-Lab-V1.2.0-En.apk"
+                            class="download-btn version-download-btn">
+                            <i class="fa fa-download"></i> Download
+                        </a>
+                    </div>-->
+
                     <div class="version-item">
                         <div class="version-details">
                             <h3 class="version-name">Version 1.0.0</h3>
@@ -992,7 +1003,8 @@
             <div id="Explore-footer" class="footer-section">
                 <h4>Contact</h4>
                 <ul class="footer-links">
-                    <li><a href="https://t.me/MrMR_711Channel"><i class="fa-brands fa-telegram"></i> Telegram Channel</a>
+                    <li><a href="https://t.me/MrMR_711Channel"><i class="fa-brands fa-telegram"></i> Telegram
+                            Channel</a>
                     </li>
                     <li><a href="mailto: mohammad117811@gmail.com"><i class="fa-solid fa-envelope"></i> Emial Us</a>
                     </li>
@@ -1013,7 +1025,8 @@
                             <img src="css/assets/download-svgs/appteka-get-en.svg" alt="appteka-get" class="myket-img">
                         </a></li>
                     <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk" class="myket">
-                            <img src="css/assets/download-svgs/direct-get-en.svg" alt="direct-get-get" class="myket-img">
+                            <img src="css/assets/download-svgs/direct-get-en.svg" alt="direct-get-get"
+                                class="myket-img">
                         </a></li>
                 </ul>
             </div>
@@ -1142,6 +1155,13 @@
             if (selectedValue === 'en') {
                 window.location.href = './archives';
             } else if (selectedValue === 'fa') {
+                window.location.href = './Fa/archives';
+            }
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            var savedLang = localStorage.getItem('language');
+            if (savedLang === 'fa') {
                 window.location.href = './Fa/archives';
             }
         });
