--- a/Fa/index.html
+++ b/Fa/index.html
@@ -65,7 +65,7 @@
                 <a href="https://MrMR-711.github.io/chemistry-lab" style="text-decoration: none;">
                     <div class="project">
                         <picture>
-                            <source srcset="../css/assets/images/Chemistry-Lab-poster-fa.jpg" type="image/webp">
+                            <source srcset="../css/assets/images/Chemistry-Lab-poster-fa.webp" type="image/webp">
                             <img src="../css/assets/images/Chemistry-Lab-poster-fa.jpg" alt="Chemistry Lab">
                         </picture>
                         <h3>آزمایشگاه شیمی</h3>
