--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -982,16 +982,16 @@
                 </div>
                 <div class="android-versions-list">
 
-                    <!--<div class="version-item">
+                    <div class="version-item">
                         <div class="version-details">
-                            <h3 class="version-name">نسخه 1.2.0</h3>
-                            <p class="version-date">June 16, 2025 :تاریخ انتشار</p>
+                            <h3 class="version-name">نسخه 1.1.0</h3>
+                            <p class="version-date">June 19, 2025 :تاریخ انتشار</p>
                         </div>
-                        <a id="button-download" href="../Chemist-Lab-V1.2.0-Fa.apk"
+                        <a id="button-download" href="../Chemist-Lab-V1.1.0-Fa.apk"
                             class="download-btn version-download-btn">
                             <i class="fa fa-download"></i> دانلود
                         </a>
-                    </div>-->
+                    </div>
 
                     <div class="version-item">
                         <div class="version-details">
@@ -1024,7 +1024,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             صفحه گیتهاب پروژه</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-robot"></i> مینی اپ تلگرام</a>
+                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-key"></i> لایسنس پروژه</a>
                     </li>
                 </ul>
             </div>
@@ -1053,7 +1053,7 @@
                             <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get"
                                 class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="../Chemist-Lab-V1.0.0.apk" class="myket">
+                    <li><a id="button-download" href="../Chemist-Lab-V1.1.0-Fa.apk" class="myket">
                             <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
                         </a></li>
                 </ul>
