--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -70,7 +70,7 @@
                         !نسخه 1.0.0 منتشر شد
                     </p>
                     <div class="cta-buttons">
-                        <a id="button-download" href="../Chemist-Lab-V1.0.0.apk" class="download-btn" target="_blank"
+                        <a id="button-download" href="../Chemist-Lab-V1.1.0-Fa.apk" class="download-btn" target="_blank"
                             rel="noopener noreferrer">
                             <i class="fab fa-android"></i> نسخه اندروید
                         </a>
@@ -179,7 +179,7 @@
                     <li><a href="https://appteka.store/app/e0fr215849" class="myket">
                             <img src="../css/assets/download-svgs/appteka-get-fa.svg" alt="appteka-get" class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="../Chemist-Lab-V1.0.0.apk"  class="myket">
+                    <li><a id="button-download" href="../Chemist-Lab-V1.1.0-Fa.apk"  class="myket">
                             <img src="../css/assets/download-svgs/direct-get-fa.svg" alt="direct-get" class="myket-img">
                         </a></li>
                 </ul>
