--- a/chemistry-lab/archives.html
+++ b/chemistry-lab/archives.html
@@ -954,16 +954,16 @@
                 </div>
                 <div class="android-versions-list">
 
-                    <!--<div class="version-item">
+                    <div class="version-item">
                         <div class="version-details">
-                            <h3 class="version-name">Version 1.2.0</h3>
-                            <p class="version-date">Release Date: June 16, 2025</p>
+                            <h3 class="version-name">Version 1.1.0</h3>
+                            <p class="version-date">Release Date: June 19, 2025</p>
                         </div>
-                        <a id="button-download" href="./Chemist-Lab-V1.2.0-En.apk"
+                        <a id="button-download" href="./Chemist-Lab-V1.1.0-Fa.apk"
                             class="download-btn version-download-btn">
                             <i class="fa fa-download"></i> Download
                         </a>
-                    </div>-->
+                    </div>
 
                     <div class="version-item">
                         <div class="version-details">
@@ -996,7 +996,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             Github Project Page</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-robot"></i> Telegram Mini-App</a>
+                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-key"></i> Project License</a>
                     </li>
                 </ul>
             </div>
@@ -1024,7 +1024,7 @@
                     <li><a href="https://appteka.store/app/e0fr215849" class="myket">
                             <img src="css/assets/download-svgs/appteka-get-en.svg" alt="appteka-get" class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk" class="myket">
+                    <li><a id="button-download" href="./Chemist-Lab-V1.1.0-En.apk" class="myket">
                             <img src="css/assets/download-svgs/direct-get-en.svg" alt="direct-get-get"
                                 class="myket-img">
                         </a></li>
