--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -64,7 +64,7 @@
                         Version 1.0.0 is published!
                     </p>
                     <div class="cta-buttons">
-                        <a id="button-download" href="./Chemist-Lab-V1.0.0.apk" class="download-btn" target="_blank"
+                        <a id="button-download" href="./Chemist-Lab-V1.1.0-En.apk" class="download-btn" target="_blank"
                             rel="noopener noreferrer">
                             <i class="fab fa-android"></i> Android Version
                         </a>
@@ -175,7 +175,7 @@
                     <li><a href="https://appteka.store/app/e0fr215849" class="myket">
                             <img src="css/assets/download-svgs/appteka-get-en.svg" alt="appteka-get" class="myket-img">
                         </a></li>
-                    <li><a id="button-download" href="./Chemist-Lab-V1.0.0.apk"  class="myket">
+                    <li><a id="button-download" href="./Chemist-Lab-V1.1.0-En.apk"  class="myket">
                             <img src="css/assets/download-svgs/direct-get-en.svg" alt="direct-get" class="myket-img">
                         </a></li>
                 </ul>
