--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="https://MrMR-711.github.io/chemistry-lab" style="text-decoration: none;">
                     <div class="project">
                         <picture>
-                            <source srcset="css/assets/images/Chemistry-Lab-poster-en.jpg" type="image/webp">
+                            <source srcset="css/assets/images/Chemistry-Lab-poster-en.webp" type="image/webp">
                             <img src="css/assets/images/Chemistry-Lab-poster-en.jpg" alt="Chemistry Lab">
                         </picture>
                         <h3>Chemistry Lab</h3>
