--- a/chemistry-lab/Fa/archives.html
+++ b/chemistry-lab/Fa/archives.html
@@ -985,7 +985,7 @@
                     <div class="version-item">
                         <div class="version-details">
                             <h3 class="version-name">نسخه 1.1.0</h3>
-                            <p class="version-date">June 19, 2025 :تاریخ انتشار</p>
+                            <p class="version-date">June 23, 2025 :تاریخ انتشار</p>
                         </div>
                         <a id="button-download" href="../Chemist-Lab-V1.1.0-Fa.apk"
                             class="download-btn version-download-btn">
@@ -1024,7 +1024,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             صفحه گیتهاب پروژه</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-key"></i> لایسنس پروژه</a>
+                    <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab/blob/main/LICENSE"><i class="fa-solid fa-key"></i> لایسنس پروژه</a>
                     </li>
                 </ul>
             </div>
