--- a/chemistry-lab/Fa/index.html
+++ b/chemistry-lab/Fa/index.html
@@ -152,7 +152,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             صفحه گیتهاب پروژه</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-robot"></i> مینی اپ تلگرام</a>
+                    <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab/blob/main/LICENSE"><i class="fa-solid fa-key"></i> لایسنس پروژه</a>
                     </li>
                 </ul>
             </div>
