--- a/chemistry-lab/archives.html
+++ b/chemistry-lab/archives.html
@@ -957,7 +957,7 @@
                     <div class="version-item">
                         <div class="version-details">
                             <h3 class="version-name">Version 1.1.0</h3>
-                            <p class="version-date">Release Date: June 19, 2025</p>
+                            <p class="version-date">Release Date: June 23, 2025</p>
                         </div>
                         <a id="button-download" href="./Chemist-Lab-V1.1.0-Fa.apk"
                             class="download-btn version-download-btn">
@@ -996,7 +996,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             Github Project Page</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-key"></i> Project License</a>
+                    <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab/blob/main/LICENSE"><i class="fa-solid fa-key"></i> Project License</a>
                     </li>
                 </ul>
             </div>
