--- a/chemistry-lab/index.html
+++ b/chemistry-lab/index.html
@@ -148,7 +148,7 @@
                 <ul class="footer-links">
                     <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab"><i class="fa-brands fa-github"></i>
                             Github Project Page</a></li>
-                    <li><a href="https://t.me/ChemistLabBot"><i class="fa-solid fa-robot"></i> Telegram Mini-App</a>
+                    <li><a href="https://github.com/MrMR-711/Web-Chemistry-Lab/blob/main/LICENSE"><i class="fa-solid fa-key"></i> Project License</a>
                     </li>
                 </ul>
             </div>
